# verity

./: .gitignore  Dockerfile  HANDOFF-VERITY-CC.md  LICENSE  README.md  SECURITY.md  config.example.yaml  crontab  deploy-aws.sh  deploy-azure.sh  deploy-gcp.sh  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt
config/: source_reputation.yaml
src/: __init__.py  audit.py  authenticity.py  config_loader.py  notifier.py  scanner.py  scorer.py  searcher.py  secrets_resolver.py  store.py
tests/: conftest.py  test_authenticity.py  test_config.py  test_scanner.py  test_scorer.py  test_store.py
