[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "verity"
version = "0.1.0"
authors = [
  { name="Gamut Intelligence" }
]
description = "Trust, but verify. Security-hardened information scanner with three-layer AI content authenticity detection."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
dependencies = [
    "aiohttp",
    "pyyaml"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
